# libqcpp

./: .biojenkins-build.sh  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  paper.bib  paper.md
cmake/: FindSeqAn.cmake  FindYamlCpp.cmake
docs/: Makefile  api.rst  applications.rst  conf.py  index.rst  requirements.txt  tutorial.rst
docs/applications/: gbsqc.rst  index.rst  trimit.rst
docs/dev/: index.rst
src/: CMakeLists.txt  Makefile.static  hbb-build.sh  qc-adaptor.cc  qc-adaptor.hh  qc-config.hh.in  qc-ds.cc  qc-ds.hh  qc-gbs.cc  qc-gbs.hh  qc-io.cc  qc-io.hh  qc-length.cc  qc-length.hh  qc-measure.cc  qc-measure.hh  qc-processor.cc  qc-processor.hh  qc-quality.cc  qc-quality.hh  qc-qualtrim.cc  qc-qualtrim.hh  qc-util.cc  qc-util.hh  qcpp.hh  seqan
src/ext/: LICENSE.seqan  LICENSE.ssw
src/processors/: qc-adaptor.cc  qc-length.cc  qc-length.hh  qc-measure.hh  qc-qualtrim.hh
src/progs/: CMakeLists.txt  gbsqc.cc  gbsqc_serial.cc  lenfilter.cc  tassel_fixer.cc  threaded.cc  trimit.cc
src/tests/: CMakeLists.txt  helpers.hh  test-io.cc  test-length.cc  test-qualtrim.cc  test-trimmerge.cc  tests.cc
src/tests/data/: tm-merge.fastq  tm-trim.fastq  truncated.fastq  valid.fasta  valid_R2.fastq  valid_il.fastq
src/tests/data/qc_reports/: report_ReadLenCounter_se.yml
src/tests/data/truths/: pe.fastq  se.fastq
src/util/: CMakeLists.txt  gbstrim.cc  qcparse.cc  qualtrim.cc  static.make  trim.cc
tests/: CMakeLists.txt  helpers.hh  test-io.cc  test-length.cc  tests.cc
tests/data/: low_qual.fastq  valid_R1.fq
tests/data/qc_reports/: report_ReadLenCounter_pe.yml
ui/: requirements.txt
ui/qcpp/: __init__.py  plot.py  util.py
ui/qcpp/templates/: adaptortrim.html  metadata.html  perbasequality.html  processor.html  root.html
ui/qcpp/templates/resources/: qcpp.css
util/: CMakeLists.txt  gbstrim.cc  qclencount.cc  qcparse.cc  qcpipeline.cc  qualtrim.cc  trim.cc
