IF(${STATIC_BINARIES})
    SET(QCPP libqcppa)
ELSE()
    SET(QCPP libqcpp)
ENDIF()


ADD_EXECUTABLE(trimit trimit.cc)
TARGET_LINK_LIBRARIES(trimit ${QCPP} ${DEPENDS_LIBS})
INSTALL(TARGETS trimit DESTINATION "bin")

ADD_EXECUTABLE(lenfilter lenfilter.cc)
TARGET_LINK_LIBRARIES(lenfilter ${QCPP} ${DEPENDS_LIBS})
